{{$NEXT}}

0.0998    2014-03-31 15:27:14 America/Los_Angeles

      [BUG FIXES]

      - Fixed behavior and error message when the repository is not
      writable by the user.  Fixes GH #150.  Thanks @bkysela.

0.0997    2014-03-23 20:36:48 America/Los_Angeles

      [BUG FIXES]

      - Fixed behavior of the --force flag on the new "update" command.
      It now applies to all packages that might be updated, not just the
      targets list on the command line.

      [ENHANCEMENTS]

      - When generating the title for the log message, only the targets
      at the top of the dependency graph are listed, and only if they
      (or one of their prerequisites) were actually affected by the
      operation.  In effect, redundant and prereq targets are therefore
      excluded from the message. This attempts to fix GH #86. Thanks @akarelas.

0.0996    2014-03-22 21:12:29 America/Los_Angeles

      [BUG FIXES]

      - Added a workaround for Net::LibIDN, which was not being properly
      indexed.  If you experienced this problem, just `pull Net::LibIDN`
      to correct it.  This fixed GH #149.  Thanks @perlpunk and @malbin.

0.0995    2014-03-18 21:12:56 America/Los_Angeles

      [INCOMPATIBLE CHANGES]

      - The argument for the "init" command is now the repository root
      instead of the stack name.  This makes the interface more convenient
      and more familiar to git users.  You can still specify the root
      using the global --root option if you like.  And the initial stack
      name can be set with the --stack option.

      [NEW COMMANDS]

      - All the new command listed below are experimental.  The interface and
      behavior is subject to change.  See the POD in each command for details.

      - The "update" command pulls the latest version of packages.  You can
      ask to update all packages or just specific ones.

      - The "merge" command joins the history of two stacks together.  At the