@@ -34,7 +34,7 @@ sub opt_spec {
 sub validate_args {
     my ( $self, $opts, $args ) = @_;
 
-    $self->usage_error('Must specify FROM_STACK and TO_STACK')
+    $self->usage_error('Must specify STACK and TO_STACK')
         if @{$args} != 2;
 
     return 1;
@@ -45,7 +45,7 @@ sub validate_args {
 sub execute {
     my ( $self, $opts, $args ) = @_;
 
-    my %stacks = ( from_stack => $args->[0], to_stack => $args->[1] );
+    my %stacks = ( stack => $args->[0], to_stack => $args->[1] );
     my $result = $self->pinto->run( $self->action_name, %{$opts}, %stacks );
 
     return $result->exit_status;
@@ -60,7 +60,7 @@ __END__
 
 =head1 SYNOPSIS
 
-  pinto --root=REPOSITORY_ROOT copy [OPTIONS] FROM_STACK TO_STACK
+  pinto --root=REPOSITORY_ROOT copy [OPTIONS] STACK TO_STACK
 
 =head1 DESCRIPTION
 
@@ -68,8 +68,8 @@ This command creates a new stack by copying an existing one.  All the
 pins and properties from the existing stack will also be copied to the
 new one.  The new stack must not already exist.
 
-Use the L<new|App::Pinto::Command::new> command to create a new empty 
-stack, or the L<props|App::Pinto::Command::props> command to change 
+Use the L<new|App::Pinto::Command::new> command to create a new empty
+stack, or the L<props|App::Pinto::Command::props> command to change
 a stack's properties after it has been created.
 
 =head1 COMMAND ARGUMENTS
@@ -91,7 +91,7 @@ Also mark the new stack as the default stack.
 =item -d TEXT
 
 Use TEXT for the description of the stack.  If not specified, defaults
-to 'Copy of stack FROM_STACK'.
+to 'Copy of stack STACK'.
 
 =item --lock
 
