@@ -22,7 +22,7 @@ with qw( Pinto::Role::Transactional );
 
 #------------------------------------------------------------------------------
 
-has from_stack => (
+has stack => (
     is       => 'ro',
     isa      => StackName | StackObject,
     required => 1,
@@ -39,7 +39,7 @@ has to_stack => (
 sub execute {
     my ($self) = @_;
 
-    my $stack = $self->repo->get_stack( $self->from_stack );
+    my $stack = $self->repo->get_stack( $self->stack );
 
     $self->repo->rename_stack( stack => $stack, to => $self->to_stack );
 
