@@ -21,7 +21,7 @@ use Pinto::Tester::Util qw(make_dist_archive);
     $t->registration_ok('JOHN/Dist-1/PkgA~1/master');
 
     # Rename the master stack.
-    $t->run_ok( Rename => { from_stack => 'master', to_stack => 'dev' } );
+    $t->run_ok( Rename => { stack => 'master', to_stack => 'dev' } );
     $t->registration_ok('JOHN/Dist-1/PkgA~1/dev');
 
     # Can't use old stack name any more
@@ -47,7 +47,7 @@ use Pinto::Tester::Util qw(make_dist_archive);
     #$t->path_not_exists_ok( [qw(stacks MASTER)] );
 
     my $master = $t->get_stack('master');
-    $t->run_ok( Rename => { from_stack => 'master', to_stack => 'MASTER' } );
+    $t->run_ok( Rename => { stack => 'master', to_stack => 'MASTER' } );
     my $MASTER = $t->get_stack('master');
 
     $t->path_exists_ok( [qw(stacks MASTER)] );
@@ -62,19 +62,19 @@ use Pinto::Tester::Util qw(make_dist_archive);
 
     my $t = Pinto::Tester->new;
     $t->run_throws_ok(
-        Rename => { from_stack => 'bogus', to_stack => 'whatever' },
+        Rename => { stack => 'bogus', to_stack => 'whatever' },
         qr/does not exist/, 'Cannot rename non-existant stack'
     );
 
     $t->run_ok( New => { stack => 'existing' } );
 
     $t->run_throws_ok(
-        Rename => { from_stack => 'master', to_stack => 'existing' },
+        Rename => { stack => 'master', to_stack => 'existing' },
         qr/already exists/, 'Cannot rename to stack that already exists'
     );
 
     $t->run_throws_ok(
-        Rename => { from_stack => 'existing', to_stack => 'existing' },
+        Rename => { stack => 'existing', to_stack => 'existing' },
         qr/already exists/, 'Cannot rename to stack to itself'
     );
 
